--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -30,8 +30,17 @@ get_property(FG_LIBS GLOBAL PROPERTY FG_LIBS)
 #message(STATUS "OSG libs ${OPENSCENEGRAPH_LIBRARIES}")
 #message(STATUS "SG libs ${SIMGEAR_LIBRARIES}")
 
+if(RTI_FOUND)
+  find_sg_component(hla13 SIMGEAR_LIBRARIES)
+  find_sg_component(hla SIMGEAR_LIBRARIES)
+  set(HLA_LIBRARIES ${RTI_LIBRARIES})
+else()
+  set(HLA_LIBRARIES "")
+endif()
+
 target_link_libraries(fgfs 
 	${FG_LIBS}
+        ${HLA_LIBRARIES}
 	${SIMGEAR_LIBRARIES}
 	${OPENSCENEGRAPH_LIBRARIES} 
 	${OPENAL_LIBRARY} 
