Removed legacy interactive approach ATC

--- a/src/ATCDCL/Makefile.am
+++ b/src/ATCDCL/Makefile.am
@@ -4,15 +4,12 @@ libATCDCL_a_SOURCES = \
 	ATC.hxx ATC.cxx \
 	atis.hxx atis.cxx \
 	tower.hxx tower.cxx \
-	approach.hxx approach.cxx \
 	ground.hxx ground.cxx \
 	commlist.hxx commlist.cxx \
 	ATCDialog.hxx ATCDialog.cxx \
 	ATCVoice.hxx ATCVoice.cxx \
 	ATCmgr.hxx ATCmgr.cxx \
 	ATCutils.hxx ATCutils.cxx \
-	ATCProjection.hxx ATCProjection.cxx \
-	transmission.hxx transmission.cxx \
-	transmissionlist.hxx transmissionlist.cxx
+	ATCProjection.hxx ATCProjection.cxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
