--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -39,6 +39,7 @@ target_link_libraries(fgfs
 	${ALUT_LIBRARY} 
 	${ZLIB_LIBRARIES}
 	${PLIB_LIBRARIES}
-	${RT_LIBRARY})
+	${RT_LIBRARY}
+	${Boost_SERIALIZATION_LIBRARY})
 	
 install(TARGETS fgfs RUNTIME DESTINATION bin)
