--- a/src/Include/config_cmake.h.in
+++ b/src/Include/config_cmake.h.in
@@ -19,7 +19,7 @@
 #cmakedefine HAVE_SYS_TIME_H
 #cmakedefine HAVE_CULLSETTINGS_CLEAR_MASK
 
-#define VERSION "@FLIGHTGEAR_VERSION"
+#define VERSION "@FLIGHTGEAR_VERSION@"
 
 #define HAVE_VERSION_H 1 // version.h is assumed for CMake builds
 
