Traffic tools. Conversion scripts to convert between xml and plain text format. Initial version of conf2xml.pl by me. Updated and modified by Mike Nieber. xml2conf.pl by Mike Nieber.

--- a/configure.ac
+++ b/configure.ac
@@ -837,6 +837,7 @@ AC_CONFIG_FILES([ \
 	scripts/debug/Makefile \
 	scripts/perl/Makefile \
 	scripts/perl/examples/Makefile \
+	scripts/perl/traffic/Makefile \
 	scripts/python/Makefile \
 	src/Makefile \
 	src/Include/Makefile \
