Olaf Flebbe: Removed Boost serialization linkage on MSVC

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -39,7 +39,6 @@ target_link_libraries(fgfs
 	${ALUT_LIBRARY} 
 	${ZLIB_LIBRARIES}
 	${PLIB_LIBRARIES}
-	${RT_LIBRARY}
-	${Boost_SERIALIZATION_LIBRARY})
+	${RT_LIBRARY})
 	
 install(TARGETS fgfs RUNTIME DESTINATION bin)
