Cmake: test the presence of FLTK

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,4 +1,7 @@
 add_subdirectory(TerraSync)
 add_subdirectory(fgviewer)
 add_subdirectory(GPSsmooth)
-add_subdirectory(fgadmin)
+
+if (FLTK_FOUND)
+    add_subdirectory(fgadmin)
+endif (FLTK_FOUND)
